--- a/index.html
+++ b/index.html
@@ -21,22 +21,21 @@
 
       .container {
         text-align: center;
-        /* background: rgba(182, 16, 16, 0.9); */
-
-        border-radius: 10px;
+        border-radius: 50px;
         background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20190223/ourmid/pngtree-simple-fireworks-commendation-conference-background-material-ceremonyxiangyunaward-background-awards-image_73682.jpg");
         background-position: center;
-        background-size: auto;
+        background-size: cover;
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-        padding: 40px;
-        max-width: 1200px;
-        margin: 20px;
+        padding: 20px;
+        margin: 10px;
         width: 100%;
+        height: 600px;
+        max-width: 1200px;
       }
 
       .title {
-        font-size: 40px;
-        margin-bottom: 40px;
+        font-size: 28px;
+        margin-bottom: 20px;
         color: black;
         text-transform: uppercase;
         font-weight: bold;
@@ -46,31 +45,41 @@
         display: flex;
         justify-content: space-around;
         align-items: flex-start;
+        position: relative;
+        flex-wrap: wrap;
       }
 
       .top-member {
         position: relative;
         text-align: center;
+        margin-bottom: 20px;
+        flex: 1 1 calc(100% / 3 - 20px);
+        max-width: calc(100% / 3 - 20px);
       }
 
       .top-member img {
-        width: 250px;
-        height: 250px;
+        width: 100%;
+        height: auto;
+        max-width: 200px;
         border-radius: 50%;
         border: 6px solid #ccc;
         object-fit: cover;
       }
 
+      .top-member.center img {
+        max-width: 250px;
+      }
+
       .rank1,
       .rank2,
       .rank3 {
-        font-size: 36px;
+        font-size: 24px;
         color: gold;
         position: absolute;
-        top: -30px;
+        top: -20px;
         left: 50%;
         transform: translateX(-50%);
-        padding: 10px 20px;
+        padding: 8px 16px;
         border-radius: 50px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
@@ -88,16 +97,66 @@
       }
 
       .member-info {
-        margin-top: 20px;
-        font-size: 24px;
+        margin-top: 10px;
+        font-size: 16px;
         color: #333;
       }
 
       .member-info span {
         display: block;
-        margin-top: 10px;
-        font-size: 20px;
+        margin-top: 5px;
+        font-size: 14px;
         color: #555;
+      }
+
+      .top-member.left {
+        top: 200px;
+        left: 100px;
+      }
+      .top-member.right {
+        top: 200px;
+        right: 100px;
+      }
+
+      @media (max-width: 768px) {
+        .top-member {
+          max-width: calc(100% / 2 - 10px);
+          flex: 1 1 calc(100% / 2 - 10px);
+        }
+
+        .title {
+          font-size: 20px;
+        }
+
+        .rank1,
+        .rank2,
+        .rank3 {
+          font-size: 20px;
+          padding: 6px 12px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .top-member {
+          max-width: 100%;
+          flex: 1 1 100%;
+        }
+
+        .title {
+          font-size: 18px;
+        }
+
+        .rank1,
+        .rank2,
+        .rank3 {
+          font-size: 18px;
+          padding: 5px 10px;
+        }
+
+        .top-member.left,
+        .top-member.right {
+          top: 30px; /* Điều chỉnh để phù hợp với màn hình nhỏ */
+        }
       }
     </style>
   </head>
@@ -106,21 +165,21 @@
     <div class="container">
       <div class="title">Đỉnh Vinh Quang: Top 3 Truyền Tin Đại Cường</div>
       <div class="top-members">
-        <div class="top-member">
+        <div class="top-member left">
           <div class="rank2">Top 2</div>
           <img src="Cẩm Tú.jpg" alt="Top 2" id="pic2" />
           <div class="member-info">
             <b>Lê Thị Cẩm Tú</b><span>Thanh Vân</span>
           </div>
         </div>
-        <div class="top-member">
+        <div class="top-member center">
           <div class="rank1">Top 1</div>
           <img src="Thế Lực.png" alt="Top 2" id="pic1" />
           <div class="member-info">
             <b>Nguyễn Thế Lực</b><span>Trang Điền Gia Nam</span>
           </div>
         </div>
-        <div class="top-member">
+        <div class="top-member right">
           <div class="rank3">Top 3</div>
           <img src="Ngọc Huyền.jpg" alt="Top 3" id="pic3" />
           <div class="member-info">
