--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       .member-info {
         margin-top: 10px;
         font-size: 16px;
-        color: #333;
+        color: black;
       }
 
       .member-info span {
