--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
   <body>
     <div class="container">
-      <div class="title">Đỉnh Vinh Quang: Top 3 Truyền Tin Đại Cường</div>
+      <div class="title">Bảng Vinh Danh: Top 3 Truyền Tin Đại Cường</div>
       <div class="top-members">
         <div class="top-member left">
           <div class="rank2">Top 2</div>
